opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-kucoin"
bug-reports: "https://github.com/vbmithr/ocaml-kucoin/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-kucoin"
doc: "https://vbmithr.github.io/ocaml-kucoin/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "ocaml" {>= "4.09.0"}
  "dune" {>= "1.11.4"}
  "kucoin" {= version}
  "fastrest" {= version}
  "sexplib" {>= "v0.12.0"}
  "uuidm" {>= "0.9.7"}
  "uri" {= "3.1.0"}
  "ocplib-json-typed" {>= "0.7.1"}
  "alcotest-async" {with-test & >= "1.0.0"}
]
synopsis: "Kucoin API"
description: """
"""
