(library
 (name        kucoin)
 (public_name kucoin)
 (modules kucoin)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   fmt
   fixtypes
   hex
   ptime
   uuidm
   uri
   ezjsonm
   ocplib-json-typed))

(library
 (name        kucoin_rest)
 (public_name kucoin-rest)
 (modules kucoin_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   kucoin
   sexplib
   uuidm
   uri
   logs-async
   ocplib-json-typed
   fastrest
   fixtypes))

(library
 (name        kucoin_ws)
 (public_name kucoin-ws)
 (modules kucoin_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   fmt
   kucoin
   ptime
   base64
   digestif.c
   uuidm
   uri
   ocplib-json-typed
   fixtypes))

(library
 (name        kucoin_ws_async)
 (public_name kucoin-ws-async)
 (modules kucoin_ws_async)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   fastrest
   kucoin-rest
   ezjsonm
   kucoin_ws
   core
   async
   fastws-async))
