(library
 (name        kucoin)
 (public_name kucoin)
 (modules kucoin)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   sexplib
   fmt
   hex
   ptime
   uuidm
   uri
   ocplib-json-typed))

(library
 (name        kucoin_rest)
 (public_name kucoin-rest)
 (modules kucoin_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   kucoin
   sexplib
   uuidm
   uri
   ocplib-json-typed
   fastrest))

(library
 (name        kucoin_ws)
 (public_name kucoin-ws)
 (modules kucoin_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   fixtypes
   kucoin
   sexplib
   fmt
   ptime
   uuidm
   uri
   ezjsonm
   ocplib-json-typed))
