(test
 (name       test)
 (modules    test)
 (package kucoin-rest)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   kucoin-rest
   alcotest
   alcotest-async
   logs-async-reporter))

(executable
 (name ws)
 (modules ws)
 (public_name kucoin-ws-cli)
 (package kucoin-bin)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   core
   async
   fastws-async
   bs-devkit
   logs-async-reporter
   kucoin-rest
   kucoin-ws))
