(test
 (name       test)
 (modules    test)
 (package kucoin-rest)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   kucoin-rest
   alcotest-async))

(executable
 (name ws)
 (modules ws)
 (public_name kucoin-ws-cli)
 (package kucoin-bin)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   core
   async
   yojson
   fastws-async
   logs-async-reporter
   kucoin-rest
   kucoin-ws))
